Use component compose and gamedata

--- a/tyruspipeline/lib/gameManager/template/components.json
+++ b/tyruspipeline/lib/gameManager/template/components.json
@@ -6,7 +6,7 @@
             "pieceDisplayName": "Template",
             "type": "pokerDeck",
             "quantity": 1,
-            "gamedataFilename": "templates",
+            "piecesGamedataFilename": "templates",
             "artMetadataFilename": "templateCard",
             "backArtMetadataFilename": "templateCardBack"
         }
