--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,40 @@
+asyncio==3.4.3
+cairocffi==1.1.0
+CairoSVG==2.4.2
 certifi==2019.11.28
+cffi==1.14.0
 chardet==3.0.4
 click==7.1.1
-cssselect2==0.2.0
+cssselect2==0.3.0
 DateTime==4.3
+defusedxml==0.6.0
+docopt==0.6.2
 ensure==1.0.0
+html5lib==1.0.1
 idna==2.9
 lxml==4.5.0
+markdown2==2.3.8
+Markdown2PDF==0.1.4
+markdown2pdf3==0.2.3
+md2pdf==0.4
 mpmath==1.1.0
-Pillow==6.2.2
+Pillow==7.0.0
+pycparser==2.20
 pyparsing==2.4.6
+Pyphen==0.9.5
 pytz==2019.3
 reportlab==3.5.42
 requests==2.23.0
 six==1.14.0
-svglib==0.9.4
+svglib==1.0.0
 svgmanip==0.0.6
 svgutils==0.3.1
 svgwrite==1.3.1
 tabulate==0.8.7
-tinycss2==0.6
+tinycss==0.3
+tinycss2==1.0.2
 urllib3==1.25.8
 Wand==0.5.9
+WeasyPrint==51
 webencodings==0.5.1
 zope.interface==5.0.1
