--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
 asyncio==3.4.3
+aiofile==1.5.2
+aiohttp==3.6.2 
+async-timeout==3.0.1 
+attrs==19.3.0 
+multidict==4.7.5 
+yarl==1.4.2
+hstspreload==2020.3.25 
+h11==0.8.1 
+h2==3.2.0 
+hpack==3.0.0 
+http3==0.6.7 
+hyperframe==5.2.0 
+requests-async==0.6.2 
+rfc3986==1.3.2
 cairocffi==1.1.0
 CairoSVG==2.4.2
 certifi==2019.11.28
