--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,6 @@ verify_ssl = true
 
 [packages]
 click = "*"
-requests = "*"
 requests-async = "*"
 aiohttp = "*"
 tabulate = "*"
@@ -18,6 +17,8 @@ ensure = "*"
 wand = "*"
 markdown2 = "*"
 WeasyPrint = "*"
+gameCrafterClient = "1.0.1"
+svgScissors = "0.0.4"
 
 [requires]
 python_version = "3.7.7"
