--- a/Pipfile
+++ b/Pipfile
@@ -8,10 +8,9 @@ verify_ssl = true
 [packages]
 click = "*"
 aiofile = "*"
-markdown2 = "*"
-WeasyPrint = "*"
-gamecrafterclient = "1.0.5"
-svgscissors = "0.0.9"
+md2pdf = "*"
+gamecrafterclient = "1.0.8"
+svgscissors = "0.0.11"
 
 [requires]
 python_version = "3.7.7"
