--- a/Pipfile
+++ b/Pipfile
@@ -6,27 +6,19 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-click = "*"
 aiofile = "*"
-markdown2 = "*"
-WeasyPrint = "*"
-asyncio = "*"
-ensure = "*"
-svgutils = "*"
-wand = "*"
-mpmath = "*"
-tabulate = "*"
 aiohttp = "*"
-idna-ssl = "*"
-asynctest = "*"
-typing-extensions = "*" 
 asyncclick = "*"
-anyio = "*"
+fpdf = "*"
 fpdf2 = "*"
 GitPython = "*"
-defusedxml = "*"
-gitpython = "*"
-googletrans = "3.1.0a0"
+markdown2 = "*"
+Pillow = "*"
+svgmanip = "*"
+svgutils = "*"
+tabulate = "*"
+Wand = "*"
+weasyprint = "*"
 
 [requires]
 python_version = "3"
