--- a/.github/workflows/createExecutable.yml
+++ b/.github/workflows/createExecutable.yml
@@ -42,8 +42,8 @@ jobs:
       with:
         draft: false
         prerelease: false
-        release_name: ${{ steps.version.outputs.version }}
-        tag_name: ${{ github.ref }}
+        release_name: ${{ github.run_number }}
+        tag_name: ${{ github.run_number }}
         
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
