--- a/.github/workflows/createExecutable.yml
+++ b/.github/workflows/createExecutable.yml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ['windows-latest', 'macos-latest']
+        os: ['windows-latest'] #, 'macos-latest'
 
     steps:
     - uses: actions/checkout@v2
@@ -50,9 +50,9 @@ jobs:
       run: pyinstaller --distpath ./dist -y -n templative --onefile ./templative/__main__.py --hidden-import engineio.async_drivers.aiohttp --hidden-import engineio.async_aiohttp --collect-all templative
 
     - name: Upload Artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-release-asset@v1
       with:
-        path: dist/*
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_name: templative_${{ matrix.os }}.zip
+        upload-url: ${{jobs.release.steps.create_release.upload_url}}
+        asset_path: ./dist/templative.exe
+        asset_name: templative_{{ github.run_number }}.exe
     
