--- a/.github/workflows/createExecutable.yml
+++ b/.github/workflows/createExecutable.yml
@@ -23,7 +23,7 @@ jobs:
         tag_name: ${{ github.run_number }}
     - name: Echo Upload Url
       run: |
-        upload_url=[${{steps.create_release.upload_url}}]
+        upload_url=[${{steps.create_release.outputs.upload_url}}]
         echo "upload_url=$upload_url"
         echo "upload_url=[$upload_url]"
     - name: Output Upload Url
