--- a/.github/workflows/createExecutable.yml
+++ b/.github/workflows/createExecutable.yml
@@ -21,16 +21,18 @@ jobs:
         prerelease: false
         release_name: Release ${{ github.run_number }}
         tag_name: ${{ github.run_number }}
-    - name: Echo Upload Url
+    - name: Output Upload Url
       run: |
         upload_url=[${{steps.create_release.outputs.upload_url}}]
         echo "upload_url=$upload_url"
-        echo "upload_url=[$upload_url]"
-    - name: Output Upload Url
-      run: |
-        upload_url=${{steps.create_release.upload_url}}
         echo "upload_url=$upload_url" >> "$GITHUB_OUTPUT"
-    
+  build: 
+    runs-on: "ubuntu-latest"
+    needs: release
+    steps: 
+    - name: Echo
+      run: |
+        echo [${{needs.release.outputs.upload_url}}]
   # build:
   #   needs: release
   #   runs-on: ${{ matrix.os }}
