--- a/.github/workflows/createExecutable.yml
+++ b/.github/workflows/createExecutable.yml
@@ -58,6 +58,8 @@ jobs:
 
     - name: Upload Artifact
       uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{needs.release.outputs.upload_url}}
         asset_path: ./dist/templative.exe
